# Grid9

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Grid9.sln  LICENSE  README.md  REDDIT_ANNOUNCEMENT.md  RELEASE_NOTES_v1.0.0.md  index.html  test_implementations.py
.github/workflows/: deploy-website.yml
assets/: README.md
cpp/: CMakeLists.txt  README.md  test_simple.cpp
cpp/demo/: demo.cpp
cpp/include/: CoordinateOperations.h  UniformPrecisionCoordinateCompressor.h
cpp/src/: CoordinateOperations.cpp  UniformPrecisionCoordinateCompressor.cpp
csharp/: Grid9.csproj  Grid9.sln  README.md
csharp/demo/: Demo.csproj  Program.cs
csharp/src/: CoordinateOperations.cs  MeterBasedCoordinateCompressor.cs  UniformPrecisionCoordinateCompressor.cs
csharp/tests/: CoordinateCompressorTests.cs  CoordinateOperationsTests.cs  EdgeCaseTests.cs  MeterBasedCoordinateCompressorTests.cs  Tests.csproj  UniformPrecisionCoordinateCompressorTests.cs
demo/: Program.cs
docs/: API.md  MATHEMATICS.md
java/: README.md  pom.xml
java/src/main/java/com/grid9/core/: CoordinateOperations.java  UniformPrecisionCoordinateCompressor.java
java/src/main/java/com/grid9/demo/: Grid9Demo.java
java/src/test/java/com/grid9/core/: UniformPrecisionCoordinateCompressorTest.java
javascript/: README.md  jest.config.js  package-lock.json  package.json
javascript/demo/: demo.js
javascript/src/: CoordinateOperations.js  UniformPrecisionCoordinateCompressor.js  index.js
javascript/test/: CoordinateOperations.test.js  UniformPrecisionCoordinateCompressor.test.js  index.test.js
javascript/types/: index.d.ts
marketing/: hackernews-post.md  launch-checklist.md  reddit-post.md
python/: README.md  setup.py  test_implementation.py
python/grid9/: coordinate_operations.py  meter_based_compressor.py  uniform_precision_compressor.py
python/src/: __init__.py  coordinate_operations.py  meter_based_compressor.py  uniform_precision_compressor.py
python/test/: test_coordinate_operations.py  test_meter_based_compressor.py  test_uniform_precision_compressor.py
python/tests/: test_coordinate_operations.py  test_meter_based_compressor.py  test_uniform_precision_compressor.py
rust/: Cargo.toml  README.md
rust/examples/: demo.rs
rust/src/: coordinate_operations.rs  lib.rs  test_simple.rs  uniform_precision_compressor.rs
src/: CoordinateOperations.cs  MeterBasedCoordinateCompressor.cs  UniformPrecisionCoordinateCompressor.cs
tests/: MeterBasedCoordinateCompressorTests.cs  README.md  UniformPrecisionCoordinateCompressorTests.cs
website/: README.md  index.html  robots.txt  sitemap.xml
website/assets/: README.md
website/cpp/: index.html
website/csharp/: index.html
website/java/: index.html
website/javascript/: index.html
website/python/: index.html
website/rust/: index.html
